network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-only-app
  namespace: db             
spec:
  podSelector:
    matchLabels:
      app: mysql                  
  policyTypes:
  - Ingress                       
  ingress:
  - from:
    - namespaceSelector:          
        matchLabels:
          name: app
      podSelector:                
        matchLabels:
          app: autoever-web        
    ports:
    - protocol: TCP
      port: 3306
